<resources>
    <string name="app_name">job search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Поиск</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="error_text"> Что то пошло не так</string>
    <string name="loading_text"> Загрузка продолжается</string>
    <string name="look_text">Должность, ключевые слова</string>
    <string name="search_text">"Должность по подходящим вакан…"</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>