<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_favourite"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/responsesFragment"
        android:icon="@drawable/ic_response"
        android:title="@string/title_responses" />

    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_massage"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/profileFragment"
        android:checkable="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>